# user-error

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
src/: helper.rs  implementation.rs  lib.rs  scrawl_errors.rs  sqlite_errors.rs  stdio_errors.rs  string_errors.rs  traits.rs
tests/: simple.rs
