[package]
name = "user-error"
version = "1.2.0"
authors = ["Amy <git@xvrqt.com>"]
edition = "2018"
repository = "https://github.com/xvrqt/user-error.git"
homepage = "https://github.com/xvrqt/user-error"
license = "BSD-3-Clause"
readme = "README.md"
description = "Simple error type that display in a clear and beautiful manner to the user of a CLI application."
keywords = ["errors", "pretty-print", "struct", "xvrqt"]
categories = ["data-structures", "command-line-interface"]

